Bug 153009 - Android Viewer: Title and text placeholder misplaced when creating new presentation
Summary: Android Viewer: Title and text placeholder misplaced when creating new presen...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Android Viewer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All Android
: medium normal
Assignee: Michael Weghorn (away)
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-13 17:04 UTC by Michael Weghorn (away)
Modified: 2023-01-17 06:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue (203.20 KB, image/png)
2023-01-13 17:04 UTC, Michael Weghorn (away)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn (away) 2023-01-13 17:04:37 UTC
Created attachment 184637 [details]
Screenshot of the issue

As mentioned in [1]: When creating a new presentation in Android Viewer, the text placeholders for the title etc. ("Click to add Title", "Click to add Text")  are misplaced.

Steps to reproduce:

1) enable experimental mode in Android Viewer
2) start Android Viewer
3) create a new presentation: tap on the "+" symbol on the bottom right, then "New Presentation"

Actual result:
Placeholder text is on the top left and overlaps each other, unreadable (s. attached screenshot)

Expected result:
Placeholder texts should be in a proper location and readable, as is the case for the desktop version of Impress

Version: 7.6.0.0.alpha0+
Build ID: 402ab3d145a1

Note: The text is properly placed when opening an existing presentation that actually has text instead.

[1] https://gitlab.com/fdroid/fdroiddata/-/merge_requests/12380#note_1230039774
Comment 1 Michael Weghorn (away) 2023-01-13 17:05:32 UTC
Was mentioned during F-Droid MR review. I can confirm and am working on a fix.
Comment 2 Commit Notification 2023-01-17 06:18:20 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3cecdaeab10d4fcb0f478035fa3831c2e255b10c

tdf#153009 android: Set BRAND_SHARE_SUBDIR for more default structure

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-01-17 06:18:23 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48916eb11bea29ac2f7963d779b18491d6015737

tdf#153009 Use recursive mutex in CDocumentBuilder

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-17 06:18:25 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcce2205313b6c3a427d0ab12b65526a577fe996

tdf#153009 android: Include more doc layout related XML files

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.